# MGL

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
MGL/: CMakeLists.txt
MGL/assets/shaders/: batch.glsl
MGL/src/: Assert.h  Constants.h  FrameBuffer.cpp  FrameBuffer.h  Geometry.cpp  Geometry.h  GraphicsCapabilities.cpp  GraphicsCapabilities.h  IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.cpp  VertexBufferLayout.h
Sandbox/: CMakeLists.txt  main.cpp
Sandbox/assets/shaders/: default.glsl
include/: MGL.h
